--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <!--SITE HEADER-->
@@ -147,7 +147,7 @@
           <ul class="advantages-list list">
 
             <li class="advantages-item">
-              <div class="advanages-icon">
+              <div class="advantages-icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
@@ -161,7 +161,7 @@
             </li>
 
             <li class="advantages-item">
-              <div class="advanages-icon">
+              <div class="advantages-icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
@@ -176,7 +176,7 @@
 
             <li class="advantages-item">
 
-              <div class="advanages-icon">
+              <div class="advantages-icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
@@ -191,7 +191,7 @@
 
             <li class="advantages-item">
 
-              <div class="advanages-icon">
+              <div class="advantages-icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
