--- a/portfolio.html
+++ b/portfolio.html
@@ -24,225 +24,234 @@
 	</head>
 	<body>
 		<!--SITE HEADER-->
-		<header class="nav-header">
-			<div class="container nav-container">
-				<nav class="site-nav">
-					<a href="" class="site-logo link">Web<span class="logo-second-half">Studio</span></a>
-					<ul class="site-nav-list list">
-						<li class="site-nav-item">
-							<a href="./index.html" class="site-nav-link link">Студия</a>
-						</li>
-						<li class="site-nav-item">
-							<a href="./portfolio.html" class="site-nav-link link current">Портфолио</a>
-						</li>
-						<li class="site-nav-item">
-							<a href="" class="site-nav-link link">Контакты</a>
-						</li>
-					</ul>
-				</nav>
-
-				<ul class="contacts-list list">
-					<li class="contacts-item">
-						<a href="mailto:info@devstudio.com" class="contacts-link link">
-							<svg class="contacts-icon" width="16" height="12">
-								<use href="./images/icons.svg#convert"></use>
-							</svg>
-							info@devstudio.com
-						</a>
-					</li>
-					<li class="contacts-item">
-						<a href="tel:+380961111111" class="contacts-link link">
-							<svg class="contacts-icon" width="10" height="16">
-								<use href="./images/icons.svg#smartphone"></use>
-							</svg>
-							+38 096 111 11 11
-						</a>
-					</li>
+		<header class="header">
+			<div class="header__wrap container">
+			  <nav class="header__navigation">
+				<a href="" class="header-logo header-logo--margin-right link"
+				  >Web<span class="header-logo--black-half">Studio</span></a
+				>
+				<ul class="header__list list">
+				  <li class="header__item">
+					<a href="./index.html" class="header__link link"
+					  >Студия</a
+					>
+				  </li>
+				  <li class="header__item">
+					<a href="./portfolio.html" class="header__link link current"
+					  >Портфолио</a
+					>
+				  </li>
+				  <li class="header__item">
+					<a href="" class="header__link link">Контакты</a>
+				  </li>
 				</ul>
+			  </nav>
+	  
+			  <ul class="header-contacts__list list">
+	  
+				<li class="header-contacts__item">
+				  <a href="mailto:info@devstudio.com" class="header-contacts__link link">
+					<svg class="header-contacts__icon" width="16" height="12">
+					  <use href="./images/icons.svg#convert"></use>
+					</svg>
+					info@devstudio.com
+				  </a>
+	  
+				</li>
+				<li class="header-contacts__item">
+				  <a href="tel:+380961111111" class="header-contacts__link link">
+					<svg class="header-contacts__icon" width="10" height="16">
+					  <use href="./images/icons.svg#smartphone"></use>
+					</svg>
+					+38 096 111 11 11
+				  </a>
+				</li>
+	  
+			  </ul>
 			</div>
-		</header>
+		  </header>
 		<!-- MAIN -->
 		<main>
 			<!-- PROJECTS FILLTER -->
-			<section class="section">
+			<section class="filter-nav section">
 				<div class="container">
 					<h1 class="visually-hidden">Проекты</h1>
-					<ul class="filter-nav-list list">
-						<li class="filter-nav-item">
-							<button type="button" class="filter-nav-buttons">Все</button>
+					<ul class="filter-nav__list filter-nav--bottom-margin list">
+						<li class="filter-nav__item">
+							<button type="button" class="filter-nav__buttons">Все</button>
 						</li>
-						<li class="filter-nav-item">
-							<button type="button" class="filter-nav-buttons">Веб-сайты</button>
-						</li>
-
-						<li class="filter-nav-item">
-							<button type="button" class="filter-nav-buttons">Приложения</button>
+						<li class="filter-nav__item">
+							<button type="button" class="filter-nav__buttons">Веб-сайты</button>
 						</li>
 
-						<li class="filter-nav-item">
-							<button type="button" class="filter-nav-buttons">Дизайн</button>
+						<li class="filter-nav__item">
+							<button type="button" class="filter-nav__buttons">Приложения</button>
 						</li>
-						<li class="filter-nav-item">
-							<button type="button" class="filter-nav-buttons">Маркетинг</button>
+
+						<li class="filter-nav__item">
+							<button type="button" class="filter-nav__buttons">Дизайн</button>
+						</li>
+						<li class="filter-nav__item">
+							<button type="button" class="filter-nav__buttons">Маркетинг</button>
 						</li>
 					</ul>
 					<!----------- PROJECTS LIST ------------>
-					<ul class="projects-list list">
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+					<ul class="projects__list list">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/laptop_img.jpg" alt="открытый ноутбук" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">Технокряк</h2>
-									<p class="projects-description">Веб-сайт</p>
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">Технокряк</h2>
+									<p class="projects-text__description">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/basketball_img.jpg" alt="игра в баскетбол" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">
 										Постер
 										<span lang="en">Orlean vs Golden Star</span>
 									</h2>
-									<p class="projects-description">Дизайн</p>
+									<p class="projects-text__description">Дизайн</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/seafood_img.jpg" alt="логотип ресторана" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">Ресторан Seafood</h2>
-									<p class="projects-description">Приложение</p>
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">Ресторан Seafood</h2>
+									<p class="projects-text__description">Приложение</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/headphones_img.jpg" alt="наушники" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">
 										Проект
 										<span lang="en">Prime</span>
 									</h2>
-									<p class="projects-description">Маркетинг</p>
+									<p class="projects-text__description">Маркетинг</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/boxes_img.jpg" alt="две картонные коробки" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">
 										Проект
 										<span lang="en">Boxes</span>
 									</h2>
-									<p class="projects-description">Приложение</p>
+									<p class="projects-text__description">Приложение</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/computer_img.jpg" alt="моноблок" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
-									<p class="projects-description">Веб-сайт</p>
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title" lang="en">Inspiration has no Borders</h2>
+									<p class="projects-text__description">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/book_img.jpg" alt="открытая книга" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">
 										Издание
 										<span lang="en">Limited Edition</span>
 									</h2>
-									<p class="projects-description">Дизайн</p>
+									<p class="projects-text__description">Дизайн</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/labeltag_project_img.jpg" alt="бирка с надписью" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title">
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title">
 										Проект
 										<span lang="en">LAB</span>
 									</h2>
-									<p class="projects-description">Маркетинг</p>
+									<p class="projects-text__description">Маркетинг</p>
 								</div>
 							</a>
 						</li>
 
-						<li class="projects-item">
-							<a href="" class="projects-link link">
-								<div class="projects-top-wrap">
+						<li class="projects__item">
+							<a href="" class="projects__link link">
+								<div class="projects-image__wrap">
 									<img src="./images/gb_project_img.jpg" alt="работа за ноутбуком" width="370" />
-									<p class="projects-top-text">
+									<p class="projects-image__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-wrap">
-									<h2 class="projects-title" lang="en">Growing Business</h2>
-									<p class="projects-description">Приложение</p>
+								<div class="projects-text__wrap">
+									<h2 class="projects-text__title" lang="en">Growing Business</h2>
+									<p class="projects-text__description">Приложение</p>
 								</div>
 							</a>
 						</li>
@@ -252,30 +261,32 @@
 		</main>
 		<!-- FOOTER -->
 		<footer class="footer">
-			<div class="container wrapper">
+			<div class="footer__wrap container">
 	  
 			  <div class="footer-contacts">
-				<a href="" class="site-logo-footer link"
-				>Web<span class="white-half-logo">Studio</span>
-			  </a>
-			  <address class="footer-address">
-				<ul class="footer-list list">
-				  <li class="footer-item">
+				<a href="" class="footer-logo link">
+				  Web
+				  <span class="footer-logo--white-half">Studio</span>
+				</a>
+	  
+			  <address class="footer-contacts__address footer-contacts__adress-bottom-margin">
+				<ul class="footer-contacts__list list">
+				  <li class="footer-contacts__item">
 					<a
-					  class="footer-link-location link"
+					  class="footer-contacts__location link"
 					  href="https://goo.gl/maps/r5CcagLjubWfefs69"
 					  target="_blank"
 					  rel="nooper norefferer"
 					  >г. Киев, пр-т Леси Украинки, 26</a
 					>
 				  </li>
-				  <li class="footer-item">
-					<a class="footer-link link" href="mailto:info@devstudio.com"
+				  <li class="footer-contacts__item">
+					<a class="footer-contacts__link link" href="mailto:info@devstudio.com"
 					  >info@devstudio.com</a
 					>
 				  </li>
-				  <li class="footer-item">
-					<a class="footer-link link" href="tel:+380961111111"
+				  <li class="footer-contacts__item">
+					<a class="footer-contacts__link link" href="tel:+380961111111"
 					  >+38 096 111 11 11</a
 					>
 				  </li>
@@ -283,37 +294,37 @@
 			  </address>
 			  </div>
 	  
-			  <div class="footer-socials">
-				<h3 class="footer-socials-title">Присоединяйтесь</h3>
-				  <ul class="footer-socials-list list">
+			  <div class="footer-socials footer-socials--margin-left">
+				<h3 class="footer-socials__title">Присоединяйтесь</h3>
+				  <ul class="footer-socials__list list">
 	  
-				  <li class="footer-socials-item">
-					<a href="" class="footer-socials-link">
-					  <svg class="footer-socials-icon" width="20" height="20">
+				  <li class="footer-socials__item">
+					<a href="" class="footer-socials__link">
+					  <svg class="footer-socials__icon" width="20" height="20">
 						<use href="./images/icons.svg#instagram"></use>
 					  </svg>
 					</a>
 				  </li>
 	  
-				  <li class="footer-socials-item">
-					<a href="" class="footer-socials-link">
-					  <svg class="footer-socials-icon" width="20" height="20">
+				  <li class="footer-socials__item">
+					<a href="" class="footer-socials__link">
+					  <svg class="footer-socials__icon" width="20" height="20">
 						<use href="./images/icons.svg#twitter"></use>
 					  </svg>
 					</a>
 				  </li>
 	  
-				  <li class="footer-socials-item">
-					<a href="" class="footer-socials-link">
-					  <svg class="footer-socials-icon" width="20" height="20">
+				  <li class="footer-socials__item">
+					<a href="" class="footer-socials__link">
+					  <svg class="footer-socials__icon" width="20" height="20">
 						<use href="./images/icons.svg#facebook"></use>
 					  </svg>
 					</a>
 				  </li>
 	  
-				  <li class="footer-socials-item">
-					<a href="" class="footer-socials-link">
-					  <svg class="footer-socials-icon" width="20" height="20">
+				  <li class="footer-socials__item">
+					<a href="" class="footer-socials__link">
+					  <svg class="footer-socials__icon" width="20" height="20">
 						<use href="./images/icons.svg#linkedin"></use>
 					  </svg>
 					</a>
@@ -323,16 +334,17 @@
 			  </div>
 			  
 			  <div class="footer-subscribe">
-				<b class="footer-subscribe-title">Подпишитесь на рассылку</b>
-				<form action="#" class="footer-subscribe-wrap">
-				  <input class="footer-subscribe-input" type="email" name="submail" placeholder="E-mail">
-				  <button class="footer-subscribe-button" type="submit">Подписаться
-					<svg class="footer-subscribe-icon" width="24" height="24">
+				<b class="footer-subscribe__title">Подпишитесь на рассылку</b>
+				<form action="#" class="footer-subscribe__form">
+				  <input class="footer-subscribe__input" type="email" name="submail" placeholder="E-mail">
+				  <button class="footer-subscribe__button" type="submit">Подписаться
+					<svg class="footer-subscribe__icon" width="24" height="24">
 					  <use href="./images/icons.svg#send"></use>
 					</svg>
 				  </button>
 				</form>
 			  </div>
+	  
 			</div>
 		  </footer>
 	</body>
