--- a/portfolio.html
+++ b/portfolio.html
@@ -25,45 +25,46 @@
 	<body>
 		<!--SITE HEADER-->
 		<header class="header">
-			<div class="header__wrap container">
+			<div class="header__container container">
 			  <nav class="header__navigation">
-				<a href="" class="header-logo header-logo--margin-right link"
-				  >Web<span class="header-logo--black-half">Studio</span></a
+				<a href="" class="logo header__logo "
+				  >Web<span class="logo__black">Studio</span></a
 				>
-				<ul class="header__list list">
-				  <li class="header__item">
-					<a href="./index.html" class="header__link link"
+				<ul class="site-nav">
+				  <li class="site-nav__item">
+					<a href="./index.html" class="site-nav__link"
+					  "
 					  >Студия</a
 					>
 				  </li>
-				  <li class="header__item">
-					<a href="./portfolio.html" class="header__link link current"
+				  <li class="site-nav__item">
+					<a href="./portfolio.html" class="site-nav__link site-nav__link--current"
 					  >Портфолио</a
 					>
 				  </li>
-				  <li class="header__item">
-					<a href="" class="header__link link">Контакты</a>
+				  <li class="site-nav__item">
+					<a href="" class="site-nav__link">Контакты</a>
 				  </li>
 				</ul>
 			  </nav>
 	  
-			  <ul class="header-contacts__list list">
+			  <ul class="contacts">
 	  
-				<li class="header-contacts__item">
-				  <a href="mailto:info@devstudio.com" class="header-contacts__link link">
-					<svg class="header-contacts__icon" width="16" height="12">
-					  <use href="./images/icons.svg#convert"></use>
-					</svg>
-					info@devstudio.com
+				<li class="contacts__item">
+				  <a href="mailto:info@devstudio.com" class="contacts__link">
+				  <svg class="contacts__icon" width="16" height="12">
+					<use href="./images/icons.svg#convert"></use>
+				  </svg>
+				  info@devstudio.com
 				  </a>
-	  
+			
 				</li>
-				<li class="header-contacts__item">
-				  <a href="tel:+380961111111" class="header-contacts__link link">
-					<svg class="header-contacts__icon" width="10" height="16">
-					  <use href="./images/icons.svg#smartphone"></use>
-					</svg>
-					+38 096 111 11 11
+				<li class="contacts__item">
+				  <a href="tel:+380961111111" class="contacts__link">
+				  <svg class="contacts__icon" width="10" height="16">
+					<use href="./images/icons.svg#smartphone"></use>
+				  </svg>
+				  +38 096 111 11 11
 				  </a>
 				</li>
 	  
@@ -73,185 +74,186 @@
 		<!-- MAIN -->
 		<main>
 			<!-- PROJECTS FILLTER -->
-			<section class="filter-nav section">
+			<section class="section">
 				<div class="container">
 					<h1 class="visually-hidden">Проекты</h1>
-					<ul class="filter-nav__list filter-nav--bottom-margin list">
-						<li class="filter-nav__item">
-							<button type="button" class="filter-nav__buttons">Все</button>
+					<ul class="filter filter--bottom-margin list">
+						<li class="filter__item">
+							<button type="button" class="filter__buttons">Все</button>
 						</li>
-						<li class="filter-nav__item">
-							<button type="button" class="filter-nav__buttons">Веб-сайты</button>
-						</li>
-
-						<li class="filter-nav__item">
-							<button type="button" class="filter-nav__buttons">Приложения</button>
+						<li class="filter__item">
+							<button type="button" class="filter__buttons">Веб-сайты</button>
 						</li>
 
-						<li class="filter-nav__item">
-							<button type="button" class="filter-nav__buttons">Дизайн</button>
+						<li class="filter__item">
+							<button type="button" class="filter__buttons">Приложения</button>
 						</li>
-						<li class="filter-nav__item">
-							<button type="button" class="filter-nav__buttons">Маркетинг</button>
+
+						<li class="filter__item">
+							<button type="button" class="filter__buttons">Дизайн</button>
+						</li>
+						<li class="filter__item">
+							<button type="button" class="filter__buttons">Маркетинг</button>
 						</li>
 					</ul>
 					<!----------- PROJECTS LIST ------------>
-					<ul class="projects__list list">
+					<ul class="projects">
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/laptop_img.jpg" alt="открытый ноутбук" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">Технокряк</h2>
-									<p class="projects-text__description">Веб-сайт</p>
+
+								<div class="projects__thumb">
+									<h2 class="projects__title">Технокряк</h2>
+									<p class="projects__description">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/basketball_img.jpg" alt="игра в баскетбол" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">
+								<div class="projects__thumb">
+									<h2 class="projects__title">
 										Постер
 										<span lang="en">Orlean vs Golden Star</span>
 									</h2>
-									<p class="projects-text__description">Дизайн</p>
+									<p class="projects__description">Дизайн</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/seafood_img.jpg" alt="логотип ресторана" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">Ресторан Seafood</h2>
-									<p class="projects-text__description">Приложение</p>
+								<div class="projects__thumb">
+									<h2 class="projects__title">Ресторан Seafood</h2>
+									<p class="projects__description">Приложение</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/headphones_img.jpg" alt="наушники" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">
+								<div class="projects__thumb">
+									<h2 class="projects__title">
 										Проект
 										<span lang="en">Prime</span>
 									</h2>
-									<p class="projects-text__description">Маркетинг</p>
+									<p class="projects__description">Маркетинг</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/boxes_img.jpg" alt="две картонные коробки" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">
+								<div class="projects__thumb">
+									<h2 class="projects__title">
 										Проект
 										<span lang="en">Boxes</span>
 									</h2>
-									<p class="projects-text__description">Приложение</p>
+									<p class="projects__description">Приложение</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/computer_img.jpg" alt="моноблок" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title" lang="en">Inspiration has no Borders</h2>
-									<p class="projects-text__description">Веб-сайт</p>
+								<div class="projects__thumb">
+									<h2 class="projects__title" lang="en">Inspiration has no Borders</h2>
+									<p class="projects__description">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/book_img.jpg" alt="открытая книга" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">
+								<div class="projects__thumb">
+									<h2 class="projects__title">
 										Издание
 										<span lang="en">Limited Edition</span>
 									</h2>
-									<p class="projects-text__description">Дизайн</p>
+									<p class="projects__description">Дизайн</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/labeltag_project_img.jpg" alt="бирка с надписью" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title">
+								<div class="projects__thumb">
+									<h2 class="projects__title">
 										Проект
 										<span lang="en">LAB</span>
 									</h2>
-									<p class="projects-text__description">Маркетинг</p>
+									<p class="projects__description">Маркетинг</p>
 								</div>
 							</a>
 						</li>
 
 						<li class="projects__item">
-							<a href="" class="projects__link link">
-								<div class="projects-image__wrap">
+							<a href="" class="projects__link">
+								<div class="projects__wrap">
 									<img src="./images/gb_project_img.jpg" alt="работа за ноутбуком" width="370" />
-									<p class="projects-image__text">
+									<p class="projects__text">
 										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
 										для цифрового шпионажа и атак на защищённые сервера конкурентов.
 									</p>
 								</div>
-								<div class="projects-text__wrap">
-									<h2 class="projects-text__title" lang="en">Growing Business</h2>
-									<p class="projects-text__description">Приложение</p>
+								<div class="projects__thumb">
+									<h2 class="projects__title" lang="en">Growing Business</h2>
+									<p class="projects__description">Приложение</p>
 								</div>
 							</a>
 						</li>
